# WhenImFree

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  TODO.md  caldate.db  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
scripts/: calendate.service  whenimfree.service
src/caldate/: db.py  main.py
src/calendate/: auth.py  config.py  db.py  main.py  utils.py
src/calendate/routers/: auth.py  booking.py  dashboard.py  profile.py  requests.py  slots.py  stripe_webhook.py
src/calendate/services/: calendar.py
src/calendate/templates/: base.html  booking.html  dashboard.html  date_share.html  landing.html  login.html  settings.html  signup.html
src/calendate/templates/partials/: _booking_calendar.html  _booking_day.html  _dashboard_body.html  _request_detail.html  calendar.html  request_card.html
src/whenimfree/: config.py  db.py  utils.py
src/whenimfree/routers/: auth.py  dashboard.py  profile.py  recurring.py  requests.py  slots.py
src/whenimfree/services/: calendar.py
src/whenimfree/templates/: base.html  dashboard.html  landing.html  login.html  profile.html  settings.html
src/whenimfree/templates/partials/: _dashboard_body.html  _profile_calendar.html  _requests.html  _schedule_list.html  calendar.html
tests/: conftest.py  test_calendar.py  test_cancel_integration.py
